# kalman-soc

./: .clang-format  .gitmodules  LICENSE  README.md  main.cpp  meson.build
backtest/: main.cpp
compile/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  demo
compile/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-projectinfo.json  intro-targets.json  meson-info.json
compile/meson-logs/: meson-log.txt
src/: SoCKalman.cpp  SoCKalman.h
tests/: meson.build
tests/modules/: SoCKalmanTest.cpp
